# TNLS

./: .gitignore  Cargo.toml  Makefile  Procfile  README.md  config.yml  contract.wasm  package-lock.json  requirements.txt
.cargo/: config.toml
.github/workflows/: Deploy.yml  EthDeploy.yml  Integration.yml  Millionaires.yml  Python_tests.yml  Secret Gateway.yml  Secret_credit_score_tests.yml  Secret_gateway_tests.yml  Secret_millionaires_tests.yml  Static.yml  Webserver_only_deploy.yml
TNLS-Clients/: README.md
TNLS-Clients/millionaires/: README.md  package-lock.json  package.json  vite.config.ts
TNLS-Clients/millionaires/src/: App.vue
TNLS-Clients/millionaires/src/assets/: main.css
TNLS-Clients/millionaires/src/components/: MetaMask.vue  Payload.vue  TheInfo.vue  TheWallet.vue
TNLS-Clients/millionaires/src/contracts/: private-gateway.ts
TNLS-Clients/payload-encryption/: index.html
TNLS-Clients/payload-encryption/src/: connect.ts  encrypt.ts  main.ts  sign.ts  style.css  submit.ts
TNLS-Gateways/: README.md
TNLS-Gateways/secret/: .gitignore  Cargo.toml  Makefile  contract.wasm
TNLS-Gateways/secret/src/: contract.rs  lib.rs  msg.rs  state.rs
TNLS-Gateways/secret/tests/: integration.ts  package-lock.json  package.json
TNLS-Relayers/: base_interface.py  conf.py  eth_interface.py  relayer.py  requirements.txt  scrt_interface.py  secret_abi.json  web_app.py
TNLS-Relayers/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
TNLS-Relayers/relayer_tests/: sample_config.yml  test_relayer.py
TNLS-Relayers/relayer_tests/interface_tests/: sample_scrt_abi.json  test_eth_interface.py  test_scrt_interface.py
TNLS-Relayers/source/: TNLS-Relayers.relayer_tests.interface_tests.rst  modules.rst
TNLS-Samples/credit-score/: contract.wasm
TNLS-Samples/credit-score/src/: contract.rs  msg.rs  state.rs
TNLS-Samples/credit-score/tests/: integration.ts
TNLS-Samples/millionaires/: .gitignore  Cargo.toml  Makefile  contract.wasm
TNLS-Samples/millionaires/examples/: schema.rs
TNLS-Samples/millionaires/schema/: handle_msg.json  priv_contract_handle_msg.json
TNLS-Samples/millionaires/src/: contract.rs  msg.rs  state.rs
TNLS-Samples/millionaires/tests/: integration.ts  package-lock.json  package.json
examples/: schema.rs
private-gateways/secret/: contract.wasm
private-gateways/secret/examples/: schema.rs
private-gateways/secret/schema/: handle_msg.json
private-gateways/secret/src/: contract.rs  msg.rs  state.rs
private-gateways/secret/tests/: integration.ts
public-gateway/script/: Contract.s.sol  DeployScript.s.sol
public-gateway/src/: Client.sol  Gateway.sol  Util.sol
public-gateway/src/interfaces/: IClient.sol  IGateway.sol
public-gateway/test/: Contract.t.sol
schema/: handle_answer.json  handle_msg.json  init_msg.json  inputs.json  query_answer.json  query_msg.json
secret-deploy/: deploy.ts
src/: contract.rs  lib.rs  msg.rs  state.rs  types.rs
tests/: GatewayContract.ts  create-input.ts  integration.ts  package-lock.json  package.json
tests/encrypt-payload/pkg/: encrypt_payload.d.ts  encrypt_payload.js  encrypt_payload_bg.wasm  encrypt_payload_bg.wasm.d.ts
tests/encrypt-payload/src/: lib.rs
(+24 files in other folders)
