[package]
name = "secret_millionaires"
version = "0.1.0"
authors = ["kent-3"]
edition = "2018"
workspace = "../.."

exclude = [
  # Those files are rust-optimizer artifacts. You might want to commit them for convenience but they should not be part of the source code publication.
  "contract.wasm",
  "hash.txt",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true

[features]
default = []
# for quicker tests, cargo test --lib
# for more explicit tests, cargo test --features=backtraces
backtraces = ["cosmwasm-std/backtraces"]
debug-print = ["cosmwasm-std/debug-print"]

[dependencies]
snafu = { version = "0.6.3" }
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
schemars = "0.7"
serde-json-wasm = "0.4.1"
cosmwasm-std = { version = "0.10.1", package = "secret-cosmwasm-std" }
cosmwasm-storage = { version = "0.10", package = "secret-cosmwasm-storage" }
secret-toolkit = { version = "0.4.0", features = ["serialization", "storage", "utils"] }
tnls = { git = "ssh://git@github.com/Atbash-Labs/TNLS/", package = "secret_gateway", features = ["library"]}

[dev-dependencies]
cosmwasm-schema = "0.10.1"
